[package]
name = "tg-rcore-tutorial-ch3"
description = "Implementation of Chapter 3 of rCore Tutorial: Multiprogramming and time-sharing multitasking."
version = "0.1.0-preview.1" # 必须符合 0.X.Y-preview.Z 格式
edition = "2024"
authors = [
  "YdrMaster <ydrml@hotmail.com>",
  "Yifan Wang<w-yf22@mails.tsinghua.edu.cn>",
  "Yu Chen <yuchen@tsinghua.edu.cn>",
  "Shuang Su <suspen@qq.com>",
]
repository = "https://github.com/shusoyo/AI4OS"
documentation = "https://docs.rs/tg-rcore-tutorial-ch3"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ai", "ai4ose", "kernel", "learning", "os"]
categories = ["no-std", "embedded"]
exclude = [
  "tg-user/**",
  "tg-rcore-tutorial-user",
  #    ".cargo/config.toml",
]

[features]
coop = []
exercise = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"

tg-sbi = { package = "tg-rcore-tutorial-sbi", version = "0.4.5", features = [
  "nobios",
] }
tg-linker = { package = "tg-rcore-tutorial-linker", version = "0.4.5" }
tg-console = { package = "tg-rcore-tutorial-console", version = "0.4.5" }
tg-kernel-context = { package = "tg-rcore-tutorial-kernel-context", version = "0.4.5" }
tg-syscall = { package = "tg-rcore-tutorial-syscall", version = "0.4.5", features = [
  "kernel",
] }

[build-dependencies]
tg-linker = { package = "tg-rcore-tutorial-linker", version = "0.4.5" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
