[package]
name = "tg-rcore-tutorial-sync"
description = "Synchronization primitives for rCore tutorial OS, including mutex, semaphore, and condvar."
version = "0.4.5"
edition = "2024"
authors = ["zflcs <zhaofangliang@foxmail.com>"]
repository = "https://github.com/rcore-os/tg-rcore-tutorial-sync"
homepage = "https://github.com/rcore-os/tg-rcore-tutorial-sync/tree/test"
documentation = "https://docs.rs/tg-rcore-tutorial-sync"
license = "GPL-3.0"
readme = "README.md"
keywords = ["rcore", "sync", "mutex", "riscv"]
categories = ["no-std", "embedded", "concurrency"]

[dependencies]
riscv = "0.10"
spin = "0.9"
tg-task-manage = { package = "tg-rcore-tutorial-task-manage", path = "../tg-rcore-tutorial-task-manage", version = "0.4.5" }
